--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -880,6 +880,29 @@ body {
     margin-right: 0;
 }
 
+.setting-row input[type="range"] {
+    flex: 1;
+    margin-right: 10px;
+}
+
+.setting-row .setting-value {
+    font-size: 12px;
+    color: #4fc3f7;
+    min-width: 40px;
+    text-align: right;
+}
+
+.setting-row:has(input[type="range"]) {
+    display: flex;
+    align-items: center;
+}
+
+.setting-row:has(input[type="range"]) label {
+    min-width: 60px;
+    margin-bottom: 0;
+    margin-right: 10px;
+}
+
 .resolution-inputs,
 .frame-range-inputs {
     margin-bottom: 12px;
